--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "^14.2.5",
     "clsx": "^2.1.1",
     "tailwind-merge": "^2.4.0",
-    "framer-motion": "^11.3.19"
+    "framer-motion": "^11.3.19",
+    "openai": "^4.20.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
