--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "clsx": "^2.1.1",
     "tailwind-merge": "^2.4.0",
     "framer-motion": "^11.3.19",
-    "openai": "^4.20.0"
+    "openai": "^4.20.0",
+    "sharp": "^0.33.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
